--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,17 @@ dependencies {
     compile 'org.hsqldb:hsqldb:2.2.9'
     compile 'log4j:log4j:1.2.16'
 
+    /* Calendar */
+    compile 'joda-time:joda-time:2.2'
+
     /* UI */
     // compile 'com.miglayout:miglayout:3.7.4'
 
     /* Testing */
     testCompile 'junit:junit:4.11'
+    testCompile "org.mockito:mockito-all:1.9.5"
     testCompile 'org.springframework:spring-test:3.2.2.RELEASE'
+
 }
 
 //jar {
