--- a/src/test/resources/jdbc-test.properties
+++ b/src/test/resources/jdbc-test.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:mem:.
-jdbc.username=sa
+jdbc.url=jdbc:hsqldb:hsql://localhost/xdb
+jdbc.username=SA
 jdbc.password=
