--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     compile 'org.hsqldb:hsqldb:2.2.9'
     compile 'log4j:log4j:1.2.16'
 
+    /* Lva Fetcher */
+    compile 'org.jsoup:jsoup:1.7.2'
+
     /* Calendar */
     compile 'joda-time:joda-time:2.2'
     compile 'com.toedter:jcalendar:1.3.2'
