--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'joda-time:joda-time:2.2'
 
     /* UI */
-    // compile 'com.miglayout:miglayout:3.7.4'
+    compile 'com.miglayout:miglayout:3.7.4'
 
     /* Testing */
     testCompile 'junit:junit:4.11'
