--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile 'org.hsqldb:hsqldb:2.2.9'
     compile 'log4j:log4j:1.2.16'
 
+    /* Social */
+    //compile 'com.restfb:restfb:1.6.12'
 
     /* Lva Fetcher */
     compile 'org.jsoup:jsoup:1.7.2'
