--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,11 @@
  # Root logger option
-log4j.rootLogger=INFO, file
+log4j.rootLogger=INFO, console, file
+
+# Direct log messages to console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.conversionPattern=%d{dd.MM.yyyy HH:mm:ss}   %-5p %c{1}:%L - %m%n
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
@@ -7,4 +13,4 @@ log4j.appender.file.File=sTUdiumsmanager.log
 #log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.file.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm:ss}   %-5p %c{1}:%L - %m%n
