--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     /* iCalendar */
     compile 'org.mnode.ical4j:ical4j:1.0.4'
     compile 'javax.activation:activation:1.1'
+    compile 'org.apache.commons:commons-io:1.3.2'
 
     /* Calendar */
     compile 'joda-time:joda-time:2.2'
