--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'log4j:log4j:1.2.16'
 
     /* Social */
-    //compile 'com.restfb:restfb:1.6.12'
+    compile 'com.restfb:restfb:1.6.12'
 
     /* Lva Fetcher */
     compile 'org.jsoup:jsoup:1.7.2'
